--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,16 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# models file
+*.engine
+*.onnx
+*.pt
+
+# image file
+*.ppm
+*.jpg
+*.png
+
 # User-specific files
 *.rsuser
 *.suo
