--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ torchvision = [
     { url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp311-cp311-linux_x86_64.whl", markers = "sys_platform == 'linux'" },
     { url = "https://download.pytorch.org/whl/cu121/torchvision-0.16.1%2Bcu121-cp311-cp311-win_amd64.whl", markers = "sys_platform == 'win32'" }
     ]
+onnx = "^1.15.0"
 
 
 [build-system]
